@@ -1,5 +1,7 @@
 2013-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Rewrite.
+
 	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly):
 	Fix the width of disabled select form.
 
